<resources>
    <string name="app_name">漫音</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_tab_home">漫音</string>
    <string name="main_tab_fav">喜爱</string>
    <string name="main_tab_notice">动态</string>
    <string name="main_tab_me">我的</string>

    <string name="title_mine_info">我的信息</string>
    <string name="title_fans">粉丝</string>
    <string name="title_comment">评论</string>
    <string name="title_contribution">贡献</string>
    <string name="title_publish">发布</string>

    <string name="message_sumbit">正在提交数据...</string>
    <string name="message_wait">正在加载数据...</string>

    <string name="login">登陆</string>
    <string name="login_username_hint">输入手机号码</string>
    <string name="login_password_hint">输入六位以上密码</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_password_empty">密码不能为空</string>

    <string name="register">注册</string>
    <string name="register_phone_hint">输入手机号</string>
    <string name="register_password_hint">输入六位以上密码</string>
    <string name="register_confirm_password_hint">重复输入密码</string>
    <string name="register_ver_code_hint">输入验证码</string>
    <string name="register_ver_code">发送验证码</string>

    <string name="me_gold">金币</string>
    <string name="me_my">我的漫音</string>
    <string name="me_score">给我们评分</string>
    <string name="me_feedback">意见和反馈</string>
    <string name="me_about">关于我们</string>
    <string name="me_setting">设置</string>

    <string name="mine_info_avatar">头像</string>
    <string name="mine_info_nickname">昵称</string>
    <string name="mine_info_signature">个性签名</string>
    <string name="mine_info_sex">性别</string>
    <string name="mine_info_password">密码</string>

</resources>
