<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_phone_hint" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:hint="@string/register_password_hint"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:hint="@string/register_confirm_password_hint"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etVerCode"
            android:layout_width="0dp"
            android:hint="@string/register_ver_code_hint"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnVerCode"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/register_ver_code" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>