<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lemon.kva.view.fragmentswitcher.FragmentSwitcher
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <include layout="@layout/view_horizontal_line" />


    <LinearLayout
        android:id="@+id/rgMainTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_tab_background"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutTabHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTabHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_tab_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_home"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTabFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTabFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_tab_fav" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_fav"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTabPublish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tab_publish" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTabNotice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTabNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_tab_notice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_notice"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTabMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="2dp">

            <ImageView
                android:id="@+id/imgTabMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg_tab_me" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_me"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
